rust/crates/turbotokens-core/src/snapshots/turbotokens_core__output__tests__snapshots_model_multiline_formatting_sorts_dedupes_and_shortens_names.snap
---
source: crates/turbotokens/src/output.rs
expression: format_models_multiline(&models)
---
- gpt-5.2-codex
- sonnet-4
- unknown
